--- a/iims/src/main/resources/application.properties
+++ b/iims/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=iims
+
+# Database Configuration (PostgreSQL)
+spring.datasource.url=jdbc:postgresql://localhost:5432/iims
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# JWT Configuration
+jwt.secret=yourSecretKey
+jwt.expiration=86400000
+
+# Server Configuration
+server.port=8080
+
+# Logging Configuration
+logging.level.com.iims=DEBUG
+logging.level.org.springframework.security=DEBUG
