landing page manegement

--- a/iims/src/main/resources/application.properties
+++ b/iims/src/main/resources/application.properties
@@ -29,3 +29,5 @@ spring.mail.username=tsedenyaemkedemealem@gmail.com
 spring.mail.password=lnfl laix cqbc iqnh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
