a meeting calander auth client created for iims

--- a/iims/src/main/resources/application.properties
+++ b/iims/src/main/resources/application.properties
@@ -33,3 +33,8 @@ spring.mail.username=tsedenyaemkedemealem@gmail.com
 spring.mail.password=qslb ssvg nfsa magv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+#google meeting credentials
+google.client.id=
+google.client.secret=
+google.redirect-uri=http://localhost:8081/api/google/callback
+google.scopes=https://www.googleapis.com/auth/calendar.events openid email profile
