--- a/iims/src/main/resources/application.properties
+++ b/iims/src/main/resources/application.properties
@@ -32,3 +32,4 @@ spring.mail.username=tsedenyaemkedemealem@gmail.com
 spring.mail.password=qslb ssvg nfsa magv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+debug=true
