rediercting to file correctly

--- a/iims/src/main/resources/application.properties
+++ b/iims/src/main/resources/application.properties
@@ -21,6 +21,11 @@ logging.level.com.iims=DEBUG
 logging.level.org.springframework.security=DEBUG
 landingpage.upload.dir=uploads
 
+# File upload configuration
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.enabled=true
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tsedenyaemkedemealem@gmail.com
